--- a/day1/Cargo.toml
+++ b/day1/Cargo.toml
@@ -1,5 +1,5 @@
 [package]
-name = "Advent of Code 2020 Day 1"
+name = "advent_of_code_2020_day_1"
 version = "0.1.0"
 authors = ["valrus <imccowan@gmail.com>"]
 edition = "2018"
