--- a/day2/Cargo.toml
+++ b/day2/Cargo.toml
@@ -1,5 +1,5 @@
 [package]
-name = "advent_of_code_2020_day_1"
+name = "day2"
 version = "0.1.0"
 authors = ["valrus <imccowan@gmail.com>"]
 edition = "2018"
@@ -7,4 +7,3 @@ edition = "2018"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
-utils = { path = "../utils" }
